--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,17 @@
 	</div>
    </div>
    <div class="col-sm-3">
+	<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://xiaomirom.com/&quot;,&quot;_blank&quot;)">
+ <div class="xe-comment-entry">
+  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v4.0/img/logo/mi.jpg" class="img-circle" width="40" /></a>
+  <div class="xe-comment">
+   <a href="#" class="xe-user-name overflowClip_1"><strong>小米ROM</strong></a>
+   <p class="overflowClip_2">小米官方的 MIUI 固件</p>
+  </div>
+ </div>
+</div>
+</div>
+   <div class="col-sm-3">
 	<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.jamcz.com/&quot;,&quot;_blank&quot;)">
  <div class="xe-comment-entry">
   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v4.0/img/logo/czjam.ico" class="img-circle" width="40" /></a>
