--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,17 @@
 			 </div>
 			</div>
 		   </div>
-
+		   <div class="col-sm-3">
+			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://ddrk.me/&quot;,&quot;_blank&quot;)" >
+			 <div class="xe-comment-entry">
+			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/dd.png" class="img-circle" width="40" /></a>
+			  <div class="xe-comment">
+			   <a href="#" class="xe-user-name overflowClip_1"><strong>低端影视</strong></a>
+			   <p class="overflowClip_2">超清在线视频站</p>
+			  </div>
+			 </div>
+			</div>
+		   </div>
 	</div>
 	<br />
 		
