--- a/index.html
+++ b/index.html
@@ -371,12 +371,12 @@
 					</div> 
 				   </div>
 			   <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://rane.nianbroken.top/&quot;,&quot;_blank&quot;)" >
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://jiling.ink/wkll.php/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
 				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.0/img/logo/0.ico" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>燃鹅助手</strong></a>
-				   <p class="overflowClip_2">燃鹅在线小助手</p>
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>流量查询</strong></a>
+				   <p class="overflowClip_2">流量查询·Cookies获取</p>
 				  </div>
 				 </div>
 				</div>
