--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
              <div class="col-sm-3">
               <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://bilibili.com/&quot;,&quot;_blank&quot;)" >
                <div class="xe-comment-entry">
-                <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.0/img/logo/bilibili.png" class="img-circle" width="40" /></a>
+                <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/bili.jpg" class="img-circle" width="40" /></a>
                 <div class="xe-comment">
                  <a href="#" class="xe-user-name overflowClip_1"><strong>Bilibili</strong></a>
                  <p class="overflowClip_2">哔哩哔哩 (゜-゜)つロ 干杯~</p>
@@ -925,7 +925,7 @@
 		 <div class="col-sm-3">
 			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://bilibili.com/&quot;,&quot;_blank&quot;)" >
 			 <div class="xe-comment-entry">
-			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.0/img/logo/bilibili.png" class="img-circle" width="40" /></a>
+			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/bili.jpg" class="img-circle" width="40" /></a>
 			  <div class="xe-comment">
 			   <a href="#" class="xe-user-name overflowClip_1"><strong>Bilibili</strong></a>
 			   <p class="overflowClip_2">哔哩哔哩 (゜-゜)つロ 干杯~</p>
@@ -1372,6 +1372,17 @@
 			  <div class="xe-comment">
 			   <a href="#" class="xe-user-name overflowClip_1"><strong>红色警戒2战网</strong></a>
 			   <p class="overflowClip_2">一个由红警2爱好者开发的免费对战平台</p>
+			  </div>
+			 </div>
+			</div>
+		   </div>
+		   <div class="col-sm-3">
+			<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://liferestart.syaro.io/view/&quot;,&quot;_blank&quot;)" "bigesj.com">
+			 <div class="xe-comment-entry">
+			  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.0/img/logo/0.ico" class="img-circle" width="40" /></a>
+			  <div class="xe-comment">
+			   <a href="#" class="xe-user-name overflowClip_1"><strong>Life Restart</strong></a>
+			   <p class="overflowClip_2">人生重开模拟器-这垃圾人生一秒也不想呆了</p>
 			  </div>
 			 </div>
 			</div>
