--- a/index.html
+++ b/index.html
@@ -282,7 +282,18 @@
 				 </div>
 				</div>
 			   </div>
-			 <div class="col-sm-3">
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.deepl.com/translator&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/deepl.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>DeepL翻译</strong></a>
+				   <p class="overflowClip_2">全世界最准确的翻译</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			 <!-- <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://fanyi.baidu.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
 				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.0/img/logo/baidu.png" class="img-circle" width="40" /></a>
@@ -292,7 +303,7 @@
 				  </div>
 				 </div>
 				</div>
-			   </div>
+			   </div> -->
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://aliyundrive.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
