--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 				 </div>
 				</div> 
 			   </div>
-			   <div class="col-sm-3">
+			   <!-- <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://support.hp.com/cn-zh/drivers/selfservice/hp-probook-455r-g6-notebook-pc/26575331/model/26575337?sku=6YF48PC&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
 				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.0/img/logo/hp.png" class="img-circle" width="40" /></a>
@@ -347,7 +347,7 @@
 				  </div>
 				 </div>
 				</div>
-			   </div>
+			   </div> -->
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://greasyfork.org/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
@@ -415,17 +415,27 @@
 			</div>
 		   </div>
 		   	<div class="col-sm-3">
-			  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/10b74d2e-5c24-4bd3-aafd-734d98495b07?# 《作文模板》&quot;,&quot;_blank&quot;)">
+			  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/821daa39-663c-4791-8bd3-4e1941a75b9d?# 《笔记》&quot;,&quot;_blank&quot;)">
 			   <div class="xe-comment-entry">
 				<a class="xe-user-img"><img src="https://gw.alipayobjects.com/zos/rmsportal/UTjFYEzMSYVwzxIGVhMu.png" class="img-circle" width="40" /></a>
 				<div class="xe-comment">
-				 <a href="#" class="xe-user-name overflowClip_1"><strong>英语作文模板</strong></a>
+				 <a href="#" class="xe-user-name overflowClip_1"><strong>笔记</strong></a>
 				 <p class="overflowClip_2">语雀-专业的云端知识库</p>
 				</div>
 			   </div>
 			  </div>
 			 </div>
-
+			 <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/10b74d2e-5c24-4bd3-aafd-734d98495b07?# 《作文模板》&quot;,&quot;_blank&quot;)">
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://gw.alipayobjects.com/zos/rmsportal/UTjFYEzMSYVwzxIGVhMu.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>英语作文模板</strong></a>
+				   <p class="overflowClip_2">语雀-专业的云端知识库</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
 	  	 <div class="col-sm-3">
 		  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/c98c1cb4-0caa-494e-b22a-8c8a3b8687b1?# 《毛中特课后题答案目录》&quot;,&quot;_blank&quot;)">
 	  	 	<div class="xe-comment-entry">
