--- a/index.html
+++ b/index.html
@@ -2523,6 +2523,17 @@
 		   <h4 class="text-gray"><i class="linecons-tag" style="margin-right:7px" id="更多导航"></i>更多导航</h4>
 		   <div class="row">
 			<div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://xiangjianan.oschina.io/lks/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/lks.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>-LKs-</strong></a>
+				   <p class="overflowClip_2">良心到难以置信的网站推荐</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://kim.plopco.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
 				  <a class="xe-user-img"><img src="https://kim.plopco.com/favicon.ico" class="img-circle" width="40" /></a>
