--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://mail.qq.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://mail.qq.com/zh_CN/htmledition/images/favicon/qqmail_favicon_96h.png" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/qqm.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>QQ邮箱</strong></a>
 				   <p class="overflowClip_2">QQ邮箱，常联系！</p>
@@ -2371,7 +2371,7 @@
 			<div class="col-sm-3">
 			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://images.nasa.gov/&quot;,&quot;_blank&quot;)">
 			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/nasa.png" class="img-circle" width="40" /></a>
+			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/nasa.png" class="img-circle" width="40" /></a>
 			   <div class="xe-comment">
 				<a href="#" class="xe-user-name overflowClip_1"><strong>NASA Image and Video Library</strong></a>
 				<p class="overflowClip_2">美国国家航天局的官方库，从此太空类的素材再也不是问题</p>
@@ -2510,7 +2510,7 @@
 			<div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://console.leancloud.app/&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://www.leancloud.cn/favicon.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/lc.ico" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>LeanCloud</strong></a>
 				   <p class="overflowClip_2">领先的 BaaS 提供商,提供数据存储、文件存储、云引擎、容器、即时通讯、消息推送、短信、游戏云等多项服务</p>
@@ -2521,10 +2521,21 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.dnspod.cn/&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://www.dnspod.cn/favicon.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/dns.ico" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>DNSPod</strong></a>
 				   <p class="overflowClip_2">国内最大的免费DNS解析产品提供商</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://vercel.com/&quot;,&quot;_blank&quot;)">
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@master/img/logo/vercel.svg" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>Vercel</strong></a>
+				   <p class="overflowClip_2">静态页面托管平台</p>
 				  </div>
 				 </div>
 				</div>
@@ -2547,7 +2558,7 @@
 			   <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://kim.plopco.com/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://kim.plopco.com/favicon.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/kim.ico" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>KIM主页</strong></a>
 				   <p class="overflowClip_2">主页从未如此惊艳</p>
@@ -2569,7 +2580,7 @@
 				 <div class="col-sm-3">
 					<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://a.maorx.cn/&quot;,&quot;_blank&quot;)" >
 					 <div class="xe-comment-entry">
-					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/MobiusBeta/assets/images/apple-touch-icon-lime.png" class="img-circle" width="40" /></a>
+					  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/lime.png" class="img-circle" width="40" /></a>
 					  <div class="xe-comment">
 					   <a href="#" class="xe-user-name overflowClip_1"><strong>青柠起始页</strong></a>
 					   <p class="overflowClip_2">一个简洁美观实用的浏览器起始页</p>
