--- a/index.html
+++ b/index.html
@@ -1437,16 +1437,16 @@
 			 </div>
 			</div>
 			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://pandownload.com/&quot;,&quot;_blank&quot;)" >
-			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/pandownload.png" class="img-circle" width="40" /></a>
-			   <div class="xe-comment">
-				<a href="#" class="xe-user-name overflowClip_1"><strong>PanDownload</strong></a>
-				<p class="overflowClip_2">百度网盘下载神器</p>
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://smya.cn/&quot;,&quot;_blank&quot;)">
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.5/img/logo/smy.ico" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>神秘鸭</strong></a>
+				   <p class="overflowClip_2">用语音助手控制你的电脑和设备</p>
+				  </div>
+				 </div>
+				</div>
 			   </div>
-			  </div>
-			 </div>
-			</div>
 			<div class="col-sm-3">
 			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.getquicker.net/&quot;,&quot;_blank&quot;)" >
 			  <div class="xe-comment-entry">
@@ -1700,19 +1700,6 @@
 			 </div>
 			</div>
 		   </div>
-		   <div class="row">
-			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://smya.cn/&quot;,&quot;_blank&quot;)">
-			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.5/img/logo/smy.ico" class="img-circle" width="40" /></a>
-			   <div class="xe-comment">
-				<a href="#" class="xe-user-name overflowClip_1"><strong>神秘鸭</strong></a>
-				<p class="overflowClip_2">用语音助手控制你的电脑和设备</p>
-			   </div>
-			  </div>
-			 </div>
-			</div>
-		   </div> 
 		   <br />
 		  
 		   <h4 class="text-gray"><i class="linecons-tag" style="margin-right:7px" id="IT工具箱"></i>IT工具箱</h4>
@@ -2536,6 +2523,17 @@
 				  <div class="xe-comment">
 				   <a href="#" class="xe-user-name overflowClip_1"><strong>Vercel</strong></a>
 				   <p class="overflowClip_2">静态页面托管平台</p>
+				  </div>
+				 </div>
+				</div>
+			   </div>
+			   <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://console.cloud.tencent.com/&quot;,&quot;_blank&quot;)">
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@master/img/logo/txy.ico" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>腾讯云</strong></a>
+				   <p class="overflowClip_2">腾讯云-控制台</p>
 				  </div>
 				 </div>
 				</div>
