--- a/index.html
+++ b/index.html
@@ -892,12 +892,12 @@
 				</div>
 			   </div>
 			   <div class="col-sm-3">
-				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://translate.google.cn/&quot;,&quot;_blank&quot;)" >
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://toolwa.com/ps/&quot;,&quot;_blank&quot;)" >
 				 <div class="xe-comment-entry">
-				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.5/img/logo/translate.ico" class="img-circle" width="40" /></a>
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/ps.png" class="img-circle" width="40" /></a>
 				  <div class="xe-comment">
-				   <a href="#" class="xe-user-name overflowClip_1"><strong>谷歌翻译</strong></a>
-				   <p class="overflowClip_2">Google 的免费翻译服务</p>
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>在线PS</strong></a>
+				   <p class="overflowClip_2">Photopea 图片编辑</p>
 				  </div>
 				 </div>
 				</div>
@@ -1751,12 +1751,12 @@
 		   <!-- </div>
 		   <div class="row"> -->
 			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.planetb.ca/syntax-highlight-word&quot;,&quot;_blank&quot;)" >
+			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://tool.mkblog.cn/screentest/&quot;,&quot;_blank&quot;)" >
 			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/syntaxhighlight.png" class="img-circle" width="40" /></a>
+			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/pmcs.png" class="img-circle" width="40" /></a>
 			   <div class="xe-comment">
-				<a href="#" class="xe-user-name overflowClip_1"><strong>Syntax Highlight</strong></a>
-				<p class="overflowClip_2">Syntax Highlight Code In Word Documents，在Word文档中插入漂亮的代码</p>
+				<a href="#" class="xe-user-name overflowClip_1"><strong>在线屏幕测试工具</strong></a>
+				<p class="overflowClip_2">想知道屏幕是否有缺陷？在线给显示器做个体检吧！</p>
 			   </div>
 			  </div>
 			 </div>
@@ -1879,12 +1879,12 @@
 		   <!-- </div>
 		   <div class="row"> -->
 			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.easeus.com/&quot;,&quot;_blank&quot;)" >
+			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://api.vvhan.com/&quot;,&quot;_blank&quot;)" >
 			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/easeus.png" class="img-circle" width="40" /></a>
+			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/hxh.ico" class="img-circle" width="40" /></a>
 			   <div class="xe-comment">
-				<a href="#" class="xe-user-name overflowClip_1"><strong>EaseUS Partition Master</strong></a>
-				<p class="overflowClip_2">磁盘分区管理软件，不用重装系统，就可以重新划分磁盘空间</p>
+				<a href="#" class="xe-user-name overflowClip_1"><strong>韩小韩API接口站</strong></a>
+				<p class="overflowClip_2">免费API数据接口调用服务平台</p>
 			   </div>
 			  </div>
 			 </div>
