--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
     <title>廿廿难辞-导航</title>
-	<link rel="icon" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.5/img/avatar.png" type="image/x-icon">
+	<link rel="icon" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/tubiao.png" type="image/x-icon">
     <meta name="keywords" content="jintaovo.cn,UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航">
     <meta name="description" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn">
     <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v5.5/img/avatar.png">
@@ -1753,7 +1753,7 @@
 			<div class="col-sm-3">
 			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://tool.mkblog.cn/screentest/&quot;,&quot;_blank&quot;)" >
 			  <div class="xe-comment-entry">
-			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/pmcs.png" class="img-circle" width="40" /></a>
+			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/logo/pmcs.jpg" class="img-circle" width="40" /></a>
 			   <div class="xe-comment">
 				<a href="#" class="xe-user-name overflowClip_1"><strong>在线屏幕测试工具</strong></a>
 				<p class="overflowClip_2">想知道屏幕是否有缺陷？在线给显示器做个体检吧！</p>
