--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://blog.jintaovo.cn/comments" target="_self">
-                            <i class="fa fa-comments"></i>  评论留言
+                        <a href="https://jintaovo.cn/shuoshuo.html" target="_self">
+                            <i class="fa-pencil"></i>  我的说说
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
@@ -205,8 +205,8 @@
                         </a>
                     </li>
 					<li class="hidden-sm hidden-xs">
-                        <a href="https://blog.jintaovo.cn/about" target="_self">
-                            <i class="fa-user"></i>  关于博主
+                        <a href="https://blog.jintaovo.cn/comments" target="_self">
+                            <i class="fa fa-comments"></i>  评论留言
                         </a>
                     </li>
                 </ul>
@@ -2183,7 +2183,7 @@
 			 </div>
 			</div>
 			<div class="col-sm-3">
-			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://fontawesome.com/&quot;,&quot;_blank&quot;)">
+			 <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://www.fontawesome.com.cn/&quot;,&quot;_blank&quot;)">
 			  <div class="xe-comment-entry">
 			   <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Yafine/cdn@3.3.3/source/box/images/logo/fontawesome.png" class="img-circle" width="40" /></a>
 			   <div class="xe-comment">
