--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/fonts/linecons/css/linecons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/xenon-core3.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/box/assets/css/xenon-core3.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/xenon-components.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/xenon-skins.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/box/assets/css/nav.min.css">
