--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@
 </div>
 </div>
 <div class="col-sm-3">
-	<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://1.akkcloud1.com/auth/register?code=Ag3d/&quot;,&quot;_blank&quot;)" >
+	<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://2.akkcloud1.com/auth/login/&quot;,&quot;_blank&quot;)" >
 	 <div class="xe-comment-entry">
 	  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/logo/akk.ico" class="img-circle" width="40" /></a>
 	  <div class="xe-comment">
