--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>廿廿难辞-导航</title>
+    <title>Dreamist-导航</title>
 	<link rel="icon" href="https://cdn.jsdelivr.net/gh/Jintaovo/cdn/img/tubiao.png" type="image/x-icon">
     <meta name="keywords" content="jintaovo.cn,UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航">
     <meta name="description" content="jintaovo.cn,收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。jintaovo.cn">
@@ -71,9 +71,9 @@
                     <!-- logo -->
                     <div class="logo">
                         <a href="https://so.jintaovo.cn" class="logo-expanded">
-                            <img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/avatar2.png" width="35%" alt="" /> 廿廿难辞
+                            <img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/avatar2.png" width="35%" alt="" /> Dreamist
 						</a>
-						<!-- <span id="site_name"> 廿廿难辞 <span></span> -->
+						<!-- <span id="site_name"> Dreamist <span></span> -->
                         <a href="https://jintaovo.cn" class="logo-collapsed">
                             <img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/avatar2.png" width="50%" alt="" />
                         </a>
@@ -2687,7 +2687,7 @@
                     <!-- Add your copyright text here -->
                     <div class="footer-text">
                         &copy; 2017-2021
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="https://jintaovo.cn/" target="_blank"><strong>Viggo</strong> | used by <strong>廿廿难辞</strong></a> 
+                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="https://jintaovo.cn/" target="_blank"><strong>Viggo</strong> | used by <strong>Dreamist</strong></a> 
 						<!-- <a href="https://blog.jintaovo.cn"><strong>返回博客</strong></a> -->
                         <!--  - Purchase for only <strong>23$</strong> -->
                     </div>
