--- a/index.html
+++ b/index.html
@@ -392,7 +392,18 @@
 				 </div>
 				</div>
 			   </div>
-			   <div class="col-sm-3">
+		   <div class="col-sm-3">
+			  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;http://192.168.123.1/&quot;,&quot;_blank&quot;)">
+			   <div class="xe-comment-entry">
+				<a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/logo/0.ico" class="img-circle" width="40" /></a>
+				<div class="xe-comment">
+				 <a href="#" class="xe-user-name overflowClip_1"><strong>路由管理</strong></a>
+				 <p class="overflowClip_2">Padavan 路由面板</p>
+				</div>
+			   </div>
+			  </div>
+			 </div>
+			 <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.speedtest.cn/&quot;,&quot;_blank&quot;)">
 			     <div class="xe-comment-entry">
 			    <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/logo/speedtest.ico" class="img-circle" width="40" /></a>
@@ -414,18 +425,18 @@
 			 </div>
 			</div>
 		   </div>
-		   	<div class="col-sm-3">
-			  <div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/821daa39-663c-4791-8bd3-4e1941a75b9d?# 《笔记》&quot;,&quot;_blank&quot;)">
-			   <div class="xe-comment-entry">
-				<a class="xe-user-img"><img src="https://gw.alipayobjects.com/zos/rmsportal/UTjFYEzMSYVwzxIGVhMu.png" class="img-circle" width="40" /></a>
-				<div class="xe-comment">
-				 <a href="#" class="xe-user-name overflowClip_1"><strong>笔记</strong></a>
-				 <p class="overflowClip_2">语雀-专业的云端知识库</p>
+			 <div class="col-sm-3">
+				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://music.163.com/&quot;,&quot;_blank&quot;)" >
+				 <div class="xe-comment-entry">
+				  <a class="xe-user-img"><img src="https://cdn.jsdelivr.net/gh/Jintaovo/cdn@v6.0/img/logo/wyyyy.png" class="img-circle" width="40" /></a>
+				  <div class="xe-comment">
+				   <a href="#" class="xe-user-name overflowClip_1"><strong>网易云音乐</strong></a>
+				   <p class="overflowClip_2">网易云音乐，音乐的力量</p>
+				  </div>
+				 </div>
 				</div>
 			   </div>
-			  </div>
-			 </div>
-			 <div class="col-sm-3">
+				<!--  <div class="col-sm-3">
 				<div class="xe-widget xe-conversations box2 label-info" onclick="window.open(&quot;https://www.yuque.com/docs/share/10b74d2e-5c24-4bd3-aafd-734d98495b07?# 《作文模板》&quot;,&quot;_blank&quot;)">
 				 <div class="xe-comment-entry">
 				  <a class="xe-user-img"><img src="https://gw.alipayobjects.com/zos/rmsportal/UTjFYEzMSYVwzxIGVhMu.png" class="img-circle" width="40" /></a>
@@ -446,7 +457,7 @@
 		</div>
 	   </div>
 	  </div>
-	 </div>
+	 </div> -->
 	</div>
 			   
  <br />
